# llm-training-template

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.py
configs/: config.yaml  logging.yaml
src/: utils.py
